# rinha-ferrugem

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.rust  build-rust.sh  docker-compose.yml  readme.md
db/: init-db.sql
nginx/: nginx.conf
src/: env_reader.rs  hoard.rs  main.rs  model.rs  user_id_cache.rs
