[package]
name = "ferrugem"
version = "0.1.0"
authors = ["Rafael K. Takahashi"]
edition = "2021"
description = "Server rust mínimo para a rinha de backend 2, 2024."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
rand = "0.8"
fxhash = "0.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
# [profile.release]
# debug = true
