[package]
name = "ferrugem"
version = "1.0.0"
authors = ["Rafael K. Takahashi"]
edition = "2021"
description = "Server rust mínimo para a rinha de backend 2, 2024."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = true
